create dir when creating new user

--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -231,10 +231,8 @@ click.innerHTML="<a href=\"javascript:ps()\">显示密码</a>";
 
  	if(err == 'missInfo')
  		alert('信息不全');
- 	if(err == 'wrongCode')
- 		alert('邀请码错误');
  	if(err == 'alr')
- 		alert('与已有用户重名，请适当处理');
+ 		alert('与已有用户重名或邮箱已被使用');
  	
 </Script> 
 </html>
